workshop04/backup/create-fortune-virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fortune-vs
spec:
  hosts:
  - "fortune.139.59.195.120.nip.io"
  gateways:
  - fortune-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: fortuneapp-svc
